Try to run gha push to kamal

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,61 +2,42 @@ name: Deploy
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
-  deploy:
+  test:
+    # Your existing test job
     runs-on: ubuntu-latest
-    environment: production
-    
+    # ...
+
+  lint:
+    # Your existing lint job
+    runs-on: ubuntu-latest
+    # ...
+
+  deploy:
+    needs: [test, lint]
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+    timeout-minutes: 20
+    env:
+      DOCKER_BUILDKIT: 1
+      VERSION: ${{ github.sha }}
+      SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Elixir
-      uses: erlef/setup-beam@v1
-      with:
-        elixir-version: '1.18.4'
-        otp-version: '26.2.2'
-
-    - name: Restore dependencies cache
-      uses: actions/cache@v4
-      with:
-        path: deps
-        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-mix-
-
-    - name: Install dependencies
-      run: mix deps.get
-
-    - name: Build release
-      run: mix release
-      env:
-        MIX_ENV: prod
-        SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
-
-    - name: Create deployment package
-      run: |
-        tar -czf email_collector.tar.gz _build/prod/rel/email_collector/
-        echo "Release package created"
-
-    - name: Upload release artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: email-collector-release
-        path: email_collector.tar.gz
-        retention-days: 30
-
-    # Add your deployment steps here
-    # Examples:
-    # - name: Deploy to server
-    #   run: |
-    #     # Your deployment commands
-    #     echo "Deploying to production server"
-    
-    # - name: Deploy to Docker registry
-    #   run: |
-    #     # Build and push Docker image
-    #     docker build -t your-registry/email-collector:${{ github.sha }} .
-    #     docker push your-registry/email-collector:${{ github.sha }} 
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.1
+        with:
+          ssh-private-key: ${{ secrets.HETZNER_SSH_PRIVATE_KEY }}
+      - name: Deploy
+        run: bundle exec kamal deploy --version=$VERSION
