--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,11 +2,9 @@ name: Security
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main]
   pull_request:
-    branches: [ main, develop ]
-  schedule:
-    - cron: '0 2 * * 1'  # Weekly on Monday at 2 AM UTC
+    branches: [main]
 
 jobs:
   security:
