Update litestream with specific aws user creds

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -30,6 +30,8 @@ env:
     - AWS_ACCESS_KEY
     - AWS_SECRET_KEY
     - DATABASE_PATH
+    - LITESTREAM_ACCESS_KEY_ID
+    - LITESTREAM_SECRET_ACCESS_KEY
     - REPLICA_URL
     - SECRET_KEY_BASE
 
