--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
           DATABASE_PATH=${{ secrets.DATABASE_PATH }}
           DOCKER_REGISTRY_PASSWORD=${{ secrets.DOCKER_REGISTRY_PASSWORD }}
           HETZNER_HOST=5.161.60.147
+          LITESTREAM_ACCESS_KEY_ID=${{ secrets.LITESTREAM_ACCESS_KEY_ID }}
+          LITESTREAM_SECRET_ACCESS_KEY=${{ secrets.LITESTREAM_SECRET_ACCESS_KEY }}
           PHX_HOST=${{ secrets.PHX_HOST }}
           REPLICA_URL=${{ secrets.REPLICA_URL }}
           SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }}
